# comfyui-jujorie-prompt-generator

./: .gitignore  README.md  __init__.py  prompt_fetch_node.py  pyproject.toml
docs/: COMBINACIONES.md
nodes/: __init__.py  conditional_pass.py  constants.py  json_to_prompt.py  prompt_fetch_node.py  prompt_url_builder.py  smart_clip_controller.py  smart_prompt_controller.py  smart_vram_clear.py
server/: DOCKER.md  Dockerfile  README.md  package.json
server/data/: body-details.json  body-proportions.json  body-shapes.json  finishes.json  hair.json  lighting.json  poses.json  presets.json  quality.json
server/src/: body-builder.js  camera-builder.js  data-loader.js  errors.js  model-builder.js  open-api.js  openapi.json  server.js  validations.js
server/src/builders/: body-builder.js  camera-builder.js  closeup-camera-builder.js  finish-builder.js  index.js  model-builder.js  summary-builder.js
server/src/routes/: index.js  openapi.route.js  options.route.js  prompt.route.js
server/src/templates/: closeup-template.js  (+1 more)
web/: .dockerignore  README.md  appearance.js  conditional_pass_color.js  json_to_prompt.js  package.json  smart_prompt_controller.js
web/data/: angles.json  body-details.json  body-proportions.json  body-shapes.json  body-types.json  compositions.json  eyes.json  finishes.json  locations.json  modes.json  modes.schema.json  poses.json  presets.json  presets.schema.json  quality.json  shots.json  skin-tones.json  summary-spicy.json  summary.json
web/src/: closeup-camera-builder.js  finish-builder.js  server.js  summary-builder.js  template.js
(+3 files in other folders)
